--- a/asset/style.css
+++ b/asset/style.css
@@ -23,14 +23,25 @@ nav a, footer{
     border: none;
     color: rgb(200, 200, 200);
 }
-h1{
-    margin-top: .5em;
-    color:cadetblue;
-}
 nav a:hover{
     background-color: cadetblue;
     color: black;
     transition: .5s;
+}
+h1{
+    margin-top: .3em;
+    color:cadetblue;
+}
+form{
+    display: flex;
+    justify-content: flex-end;
+}
+input{
+    margin: .5em .5em 0 0;
+    background-color: cadetblue;
+    padding: .2em;
+    border-radius: .4em;
+    border: transparent;
 }
 .main-block{
     justify-content: space-evenly;
@@ -60,6 +71,7 @@ p{
 .desc{
     margin: .2em;
 }
+
 .info{
     justify-content: space-evenly;
 }
@@ -68,6 +80,11 @@ footer{
 }
 
 @media screen and ( max-width: 1024px){
+    .block{
+        width: 48%;
+    }
+}
+@media screen and (max-width: 426px){
     nav{
         flex-direction: column;
         
@@ -77,11 +94,6 @@ footer{
         width: 100%;
         border-bottom: 1px solid oldlace;
     }
-    .block{
-        width: 48%;
-    }
-}
-@media screen and (max-width: 426px){
     .block{
         width: 94%;
     }
