--- a/asset/style.css
+++ b/asset/style.css
@@ -32,13 +32,20 @@ h1{
     margin: .2em 0;
     color:cadetblue;
 }
-input{
+div input, textarea{
+    width: 15em;
+}
+input, textarea{
     margin: .4em .5em;
-    padding: 0 .2em;
+    padding: .2em;
     background-color: cadetblue;
     border-radius: .4em;
     border: none;
     color: #fff;
+}
+textarea{
+    resize: vertical;
+    height: 4.5em;
 }
 .main-block{
     justify-content: space-evenly;
